fix(版本切换):3.0.0代码合并至2.0.0问题处理